--- a/start/css/qna.css
+++ b/start/css/qna.css
@@ -1,3 +1,28 @@
 #qna{
     display: none;
 }
+
+.qBox{
+    background-color: #f2f2f2;
+    text-align: center;
+    border-radius: 20px;
+    font-size: 24px;
+    width: 80%;
+}
+
+.answerList{
+    background-color: #f2f2f2;
+    border-radius: 20px;
+    text-align: center;
+    display: block;
+    width: 80%;
+    border: none;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+.answerList:hover , .answerList:focus{
+    background-color: #f8daef;
+    font-weight: 500;
+    font-size: 20px;
+}
