--- a/start/css/default.css
+++ b/start/css/default.css
@@ -1,6 +1,6 @@
 body{
-    background-color: #f7e1f0;
-    font-family: "Nanum Pen Script", cursive;
+    background-color: #fae9f4;
+    font-family: "Orbit", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
