--- a/start/css/main.css
+++ b/start/css/main.css
@@ -1,5 +1,5 @@
 #main{
-    background-color: #f2f2f2;
+    background-color: #fdfdfd;
     width: 80%;
     text-align: center;
     border-radius: 20px;
